# drf-market

./: .gitignore  pyproject.toml
api/: admin.py  models.py  randoms.py  serializers.py  urls.py  views.py
api/management/commands/: populate_db.py
api/migrations/: 0001_initial.py  0002_alter_order_order_id.py
drf_course/: settings.py
